--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,7 @@
 		<title>Kek</title>
 	</head>
 	<body>
-		<h1>Kek</h1>
-		<h3>Cucomber</h3>
+		<h3>Straight outta Compton</h3>
 		<script src="js/app.min.js"></script>
 	</body>
 </html>
